<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">我想认识你</string>
    <string name="title_activity_staggered">StaggeredActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_denglu">Denglu</string>
    <string name="title_activity_shezhigerenxinxi">Shezhigerenxinxi</string>
    <string name="title_activity_wangjimima">WangjimimaActivity</string>
    <string name="title_activity_denglu_or_zhuce">DengluOrZhuceActivity</string>
    <string name="title_activity_zhuce">ZhuceActivity</string>
    <string name="title_activity_zhuce_yanzheng">Zhuce_yanzhengActivity</string>
    <string name="title_activity_shezhigerenxinxi2">Shezhigerenxinxi2Activity</string>
    <string name="title_activity_xuanzexuexiao">XuanzexuexiaoActivity</string>
    <string name="title_activity_shengshiqu">ShengshiquActivity</string>
    <string name="title_activity_forget_passward">ForgetPasswardActivity</string>
    <string name="title_activity_forget_password__verification">ForgetPassword_VerificationActivity</string>
    <string name="title_activity_minephoto">MinephotoActivity</string>
    <string name="title_activity_change_name">ChangeNameActivity</string>
    <string name="title_activity_changexingzuo">ChangexingzuoActivity</string>
    <string name="title_activity_change_grade">ChangeGradeActivity</string>
    <string name="title_activity_change_major">ChangeMajorActivity</string>
    <string name="title_activity_change_city">ChangeCityActivity</string>
    <string name="title_activity_updatepicture">UpdatepictureActivity</string>
    <string name="title_activity_favor_list">FavorListActivity</string>
    <string name="title_activity_home_page_detial">HomePageDetialActivity</string>
    <string name="title_activity_change_birthday">ChangeBirthdayActivity</string>
    <string name="title_activity_join">JoinActivity</string>
    <string name="title_activity_activity_feedback">ActivityFeedbackActivity</string>
    <string name="title_activity_memory_wall">MemoryWallActivity</string>
    <string name="title_activity_barrage">BarrageActivity</string>
    <string name="title_activity_memory_photo">MemoryPhotoActivity</string>
    <string name="title_activity_join_users">JoinUsersActivity</string>
    <string name="title_activity_apply_for_mi_liao">ApplyForMiLiaoActivity</string>
    <string name="title_activity_creation_chat">CreationChatActivity</string>
    <string name="title_activity_mi_liao_users_list">MiLiaoUsersListActivity</string>
    <string name="title_activity_chat_group">ChatGroupActivity</string>
    <string name="title_activity_mi_liao_info">MiLiaoInfoActivity</string>
    <string name="title_activity_litter_note">LitterNoteActivity</string>
    <string name="title_activity_notes">NotesActivity</string>
    <string name="title_activity_system_settings">SystemSettingsActivity</string>
    <string name="system_setting_title">设置</string>
    <string name="system_setting_share_meetu">分享MeetU</string>
    <string name="system_setting_share_meetu_tip">分享改变世界</string>
    <string name="system_setting_evaluation_meetu">评价MeetU</string>
    <string name="system_setting_evaluation_meetu_tip">好评哦</string>
    <string name="system_setting_clear_meetu">清除缓存</string>
    <string name="system_setting_clear_meetu_tip">清除</string>
    <string name="system_setting_Checkforupdates">检查更新</string>
    <string name="system_setting_Checkforupdates_tip">V1.0</string>
    <string name="system_setting_sign_out">退出登录</string>
    <string name="system_setting_sign_out_tip">等你回来</string>
    <string name="system_setting_hello">Hi,想认识我们吗</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="report_title">举报</string>
    <string name="report_title_dismiss">取消</string>
    <string name="report_title_define">确定</string>
    <string name="report_title_selector_report_reason">选择举报原因（必选）</string>
    <string name="report_title_porn">色情</string>
    <string name="report_title_Advertising">广告</string>
    <string name="report_title_Swearing">谩骂侮辱</string>
    <string name="report_title_others">其他</string>
    <string name="report_title_fillInReason">填写举报原因（选填）</string>
    <string name="report_title_Description">亲爱的，描述一下你要举报的情况吧...</string>
    <string name="title_activity_create_litter_note">CreateLitterNoteActivity</string>
    <string name="title_activity_user_agreement">UserAgreementActivity</string>

</resources>
